Added life indicators

--- a/CasseBrique/CasseBrique/CasseBrique.csproj
+++ b/CasseBrique/CasseBrique/CasseBrique.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Net" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Balle.cs" />
